--- a/blog/templates/components/ui/navbar.html
+++ b/blog/templates/components/ui/navbar.html
@@ -1,15 +1,15 @@
  <div class="container mx-auto max-w-7xl px-4"> 
     <nav class="sticky bg-[#F6F2E6] align-middle mr-15">
-                <ul class="hidden md:flex items-center space-x-8 font-medium">
+                <ul class="hidden text-lg text-[#2a4236] font-spectral align-middle mt-4 md:flex items-center space-x-8 font-medium">
                     {% if user.is_authenticated %}
                        <li><a href="{% url 'home' %}">Inicio</a></li>
                        <li><a href="{% url 'user:user_profile' %}">Perfil</a></li>
-                       <form method="POST" action = "{% url 'user:auth_logout' %}">
-                        {% csrf_token %}
-                       <button type="submit">Cerrar Sesión</button></form>
                         {% if user.is_collaborator %}
                            <li><a href="{% url 'post:post_create' %}">Publicar</a></li>
                         {% endif %}
+                       <form method="POST" action = "{% url 'user:auth_logout' %}">
+                        {% csrf_token %}
+                       <button type="submit">Cerrar Sesión</button></form>
                     {% else %}
                        <li><a href="{% url 'home' %}">Inicio</a></li>
                        <li><a href="{% url 'user:auth_login' %}">Iniciar Sesión</a></li>
