--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -11,12 +11,12 @@
 
 {% block content %}
     <main>
-        <section class="relative h-[70vh] bg-cover bg-center text-white" style="background-image:url('static/assets/images/felicidad-alma-1-750x375-1.jpg');">
+        <section class="relative h-[70vh] bg-cover bg-center text-white" style="background-image:url('static/assets/images/portada1.webp');">
             <div class="relative z-10 h-full flex flex-col justify-start items-center text-start pt-9">
-                <h1 class="text-6xl font-birthstone drop-shadow-2xl text-white mt-10">Si no has encontrado tu Ikigai, su búsqueda ya constituye un propósito en sí mismo.</h1>
-                <div class="flex mt-auto mb-8  gap-7 space-x-10">
-                    <a href="" class="border-2 border-white rounded-full bg-[#F6F2E6] text-stone-950 font-semibold py-3 px-6 hover:bg-slate-800 hover:text-amber-50 transition duration-300">Ùltimos posts </a>
-                    <a href="" class="border-2 border-white rounded-full bg-[#F6F2E6] text-stone-950 font-semibold py-3 px-6 hover:bg-slate-800 hover:text-amber-50 transition duration-300">Categorías </a>
+                <h1 class="text-6xl font-tangerine text-white mt-10">Si no has encontrado tu Ikigai, su búsqueda ya constituye un propósito en sí mismo.</h1>
+                <div class="flex mt-auto mb-8 gap-7 space-x-10">
+                    <a href="" class="border-2 border-white rounded-full bg-[#F6F2E6] text-[#203329] font-spectral font-bold py-3 px-6 hover:bg-slate-800 hover:text-amber-50 transition duration-300">Ùltimos posts </a>
+                    <a href="" class="border-2 border-white rounded-full bg-[#F6F2E6] text-[#203329] font-spectral font-bold py-3 px-6 hover:bg-slate-800 hover:text-amber-50 transition duration-300">Categorías </a>
                 </div>
             </div>
         </section>
