--- a/blog/templates/layouts/base_layout.html
+++ b/blog/templates/layouts/base_layout.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="{% static 'assets/Ikigai.png' %}" type="image/x-icon"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Birthstone&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,400;0,600;0,700;1,400&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
 
     {% block extra_head_layout %} {% endblock extra_head_layout %}
 
@@ -22,12 +22,14 @@
       --color-a: '#a3b18a', // Un verde suave para acent 
       --color-b: '#588157',
       --color-c: '#f9fbf6',     // Un fondo casi blanco con tinte verde
-      --color-d: '#344e41',   // Texto oscuro principal
+      --color-d: '#243a2fff',   // Texto oscuro principal
                     }
     .font-tangerine{font-family:'Tangerine', sans-serif}
-    .font-birthstone{font-family:'Birthstone', sans-serif}                    
+    .font-spectral{font-family:'Spectral', serif; 
+                   font-weight: 400,
+                   font-style: 'normal'}                    
     </style>
-    <!-- Opcional: Iconos (usaremos SVGs en línea para simplicidad) -->
+
 </head>
 <body class="bg-white">
 
