corrigiendo errores en templates, views y forms

--- a/blog/templates/layouts/general_layout.html
+++ b/blog/templates/layouts/general_layout.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/Base_layoutia.html' %}
+{% extends 'layouts/Base_layout.html' %}
 {% load widget_tweaks %}
 {% load django_browser_reload %}
 {% django_browser_reload_script %}
