--- a/blog/templates/components/commons/heather.html
+++ b/blog/templates/components/commons/heather.html
@@ -7,7 +7,7 @@
                 <!-- Logo -->
             <img src="{% static 'assets/logo2.png' %}"  alt="Logo Ikigai" class="h-20 mr-2">
             </div>
-        <div> {% include 'components/ui/navia.html' %} </div>
+        <div> {% include 'components/ui/navbar.html' %} </div>
 </header>
 
 {% endblock content%}
