--- a/blog/templates/layouts/auth_layout.html
+++ b/blog/templates/layouts/auth_layout.html
@@ -11,6 +11,8 @@
   <!-- Imagen ocupa 2/3 -->
    <div class="w-2/3 hidden md:flex items-center justify-center">
      <img src="{% static 'assets/images/login-side-image.jpeg' %}" alt="bienestar" class="w-full h-full object-cover" />
+     <link rel="icon" href="{% static 'assets/favicon2.png' %}" type="image/x-icon" />
+
    </div>
 
  </div>
