--- a/blog/templates/layouts/base_layout.html
+++ b/blog/templates/layouts/base_layout.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title_layout %} IKIGAI - BLOG {% endblock title_layout %}</title>
     <link rel="icon" href="{% static 'assets/Ikigai.png' %}" type="image/x-icon"/>
+    <link rel="icon" href="{% static 'assets/favicon2.png' %}" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,400;0,600;0,700;1,400&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
@@ -26,8 +27,9 @@
                     }
     .font-tangerine{font-family:'Tangerine', sans-serif}
     .font-spectral{font-family:'Spectral', serif; 
-                   font-weight: 400,
-                   font-style: 'normal'}                    
+                   font-weight: 400;
+                   font-style: 'normal'
+                }                    
     </style>
 
 </head>
