Actualizaciones en login y register

--- a/blog/templates/auth/auth_login.html
+++ b/blog/templates/auth/auth_login.html
@@ -63,7 +63,7 @@
         </a>
 
       <div class="text-center">
-        <a href="{% url 'user:auth_register' %}" class="text-sm text-blue-500 hover:underline">
+        <a href="{% url 'user:' %}" class="text-sm text-blue-500 hover:underline">
           ¿No tenés cuenta? Registrate
         </a>
       </div>
