Mejorar la administración de usuarios y publicaciones: actualizar modelos, vistas y plantillas. Cambiar el motor de base de datos a MySQL y ajustar la carga de avatares en el registro de usuarios.

--- a/blog/templates/auth/auth_register.html
+++ b/blog/templates/auth/auth_register.html
@@ -40,7 +40,7 @@
         </div>
       {% endif %}
 
-      <form method="post" class="space-y-5" novalidate>
+      <form method="post" enctype="multipart/form-data" class="space-y-5" novalidate>
         {% csrf_token %}
 
         <div>
