Estilando los layouts.

--- a/blog/templates/components/commons/heather.html
+++ b/blog/templates/components/commons/heather.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<header class="bg-[#F6F2E6] hidden md:flex justify-between items-center py-2 text-sm border-b border-gray-200">
+<header class="bg-[#F6F2E6] md:flex justify-between items-center py-2 text-sm border-b border-gray-200">
             <div class="flex items-center">
                 <!-- Logo -->
             <img src="{% static 'assets/logo2.png' %}"  alt="Logo Ikigai" class="h-20 mr-2">
