refactor: mejorar la gestión de comentarios y calificaciones en las vistas y plantillas

--- a/blog/templates/components/ui/navbar.html
+++ b/blog/templates/components/ui/navbar.html
@@ -6,7 +6,7 @@
             {% if user.is_authenticated %}
                 <li><a href="{% url 'user:user_profile' %}">Perfil</a></li>
 
-                {% if user.is_collaborator %}
+                {% if user.is_collaborator or user.is_staff %}
                     <li><a href="{% url 'post:post_create' %}">Publicar</a></li>
                 {% endif %}
 
