refactor: update template names and improve layout for post views; enhance footer and header links

--- a/blog/templates/components/commons/footer.html
+++ b/blog/templates/components/commons/footer.html
@@ -11,17 +11,18 @@
             <div class="w-full flex flex-col lg:w-1/3 xl:w-1/3 p-2">
                 <h5 class="text-lg text-[#203329] font-libertinus-bold mb-4">REDES SOCIALES</h5>
                 <ul class="list-none"> 
-                    <li class="mb-2 align-center flex flex-row"><img src = "{% static 'assets/svg/facebook.svg' alt='Facebook'%}" class="w-5 h-5 mr-1"><a href= # class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:text-xl hover:font-libertinus-bold transition duration-900">Facebook</a>    
+                    <li class="mb-2 align-center flex flex-row"><img src = "{% static 'assets/svg/facebook.svg' alt='Facebook'%}" class="w-5 h-5 mr-1"><a href= # class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:text-xl hover:font-bold transition duration-500">Facebook</a>    
                     </li>
-                    <li class="mb-2 align-center flex flex-row"><img src = "{% static 'assets/svg/instagram.svg' alt='Instagram'%}" class="w-5 h-5 mr-1"><a href=# class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:font-libertinus-bold transition duration-300">Instagram</a>
+                    <li class="mb-2 align-center flex flex-row"><img src = "{% static 'assets/svg/instagram.svg' alt='Instagram'%}" class="w-5 h-5 mr-1"><a href=# class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:text-xl hover:font-bold transition duration-500">Instagram</a>
                     </li>
-                    <li class="mb-2 align-center flex flex-row"><img src = "{% static 'assets/svg/pinterest.svg' alt='Pinterest'%}" class="w-5 h-5 mr-1"><a href=# class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:font-libertinus-bold transition duration-300">Pinterest</a>
+                    <li class="mb-2 align-center flex flex-row"><img src = "{% static 'assets/svg/pinterest.svg' alt='Pinterest'%}" class="w-5 h-5 mr-1"><a href=# class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:text-xl hover:font-bold transition duration-500">Pinterest</a>
                     </li>
                 </ul>
             </div>
             <div class="w-full lg:w-1/3 xl:w-1/3 p-2">
                 <h5 class="text-lg text-[#203329] font-libertinus-bold mb-4">CONTACTO</h5>
-                <p class="text-[#445e35] font-libertinus-bold">Correo electrónico: <a href="mailto:info@example.com" class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:font-libertinus-bold transition duration-300">info@example.com</a></p>
+                <p class="text-[#445e35] font-libertinus-bold">Correo electrónico: <a href="mailto:info@example.com" class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:text-xl transition duration-300">info@example.com</a></p>
+                <h5 class="text-lg text-[#203329] font-libertinus-bold mt-4">ACERCA DE NOSOTROS</h5>
             </div>
         </div>
         <div class="text-center mt-6">
