--- a/blog/templates/post/post_create.html
+++ b/blog/templates/post/post_create.html
@@ -1,5 +1,5 @@
 
-{% extends 'layouts/general_layout.html' %}
+{% extends 'layouts/post_layout.html' %}
 {% load widget_tweaks %}
 {% load static %}
 {% load django_browser_reload %}
@@ -77,4 +77,5 @@ Crear post
     ← Volver al inicio
   </a>
 </main>
+
 {% endblock content %}
