--- a/blog/templates/post/post_detail.html
+++ b/blog/templates/post/post_detail.html
@@ -2,24 +2,24 @@
 
 {% block content %} 
     
-    <h1 class="flex text-3xl text-[#2a4236] font-spectral p-20 font-bold justify-center mt-3">{{ object.title }}</h1>
+    <h1 class="flex text-3xl text-[#203329] font-libertinus-bold   p-20 justify-center mt-3">{{ object.title }}</h1>
 <div class="flex flex-col gap-14 mx-28 mt-3">
          {% if object.image %}
             <img src="{{ object.image.url }}" alt="{{ object.title }}" class="w-full h-auto object-cover rounded-lg shadow-lg mb-8">
         {% endif %}
-        <p class="text-2xl text-[#19221d] font-spectral font-extralight text-">{{ object.content }}</p>
-        <p class="flex font-tangerine text-4xl text-[#19221d] justify-end mr-24 mt-0"><strong>{{ object.author }}</strong></p>
+        <p class="text-2xl text-[#445e35] font-libertinus-regular">{{ object.content }}</p>
+        <p class="flex font-tangerine text-4xl text-[#203329] justify-end mr-24 mt-0"><strong>{{ object.author }}</strong></p>
 </div>
 <form
-  method="post" action="{% url 'post:comment_create' slug=post.slug %}" class="shadow-md rounded-lg p-6">
+  method="post" class="shadow-md rounded-lg p-6">
   {% csrf_token %}
-  <h3 class="text-lg font-spectral font-semibold ml-24">Deja tu comentario:</h3>
+  <h3 class="text-lg font-libertinus-bold text-[#203329] ml-24">Deja tu comentario:</h3>
   <div class="flex flex-col mx-22 mt-3">
     <textarea
       name="content"
       rows="3"
       placeholder="Escribe aquí tu comentario..."
-      class="w-auto border text-3xl text-slate-800 font-tangerine border-gray-300 rounded-md my-10 p-3 focus:outline-none focus:ring-2 focus:ring-[#2a4236] transition"
+      class="w-auto border text-xl text-[#2a4236] font-libertinus-italic border-gray-30 rounded-md my-10 p-3 focus:outline-none focus:ring-2 focus:ring-[#2a4236] transition"
     >{{ comment_form.content.value }}</textarea>
   </div>
   {% if comment_form.content.errors %}
@@ -27,7 +27,7 @@
   {% endif %}
 
   <button type="submit"
-      class="flex justify-self-end border-2 border-white rounded-full bg-[#F6F2E6] text-[#203329] text-base font-spectral py-3 px-6 mr-28 hover:bg-[#203329] hover:text-amber-50 transition duration-300">
+      class="flex justify-self-end border-2 border-white rounded-full bg-[#F6F2E6] text-[#203329] text-base font-libertinus-regular py-3 px-6 mr-28 hover:bg-[#203329] hover:text-[#F6F2E6] transition duration-300">
         Publicar
   </button>
 </form>
